--- a/apps/doggo-rating-app/src/app/app.component.html
+++ b/apps/doggo-rating-app/src/app/app.component.html
@@ -1,2 +1,3 @@
-<ps-doggo-rating-nx-welcome></ps-doggo-rating-nx-welcome>
-<router-outlet></router-outlet>
+<div class="container">
+  <app-layout></app-layout>
+</div>
