made layout component stateless

--- a/m05/end/apps/doggo-rating-app/src/app/shell/layout/layout.component.html
+++ b/m05/end/apps/doggo-rating-app/src/app/shell/layout/layout.component.html
@@ -7,4 +7,7 @@
 
 <router-outlet></router-outlet>
 
-<app-footer></app-footer>
+<app-footer
+  [userEmail]="userEmail$ | async"
+  [realTimeConnection]="realTimeConnection$ | async"
+></app-footer>
