--- a/m05/end/apps/doggo-rating-app/src/app/shell/footer/footer.component.html
+++ b/m05/end/apps/doggo-rating-app/src/app/shell/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="d-flex flex-column bd-highlight mb-3">
       <span class="mb-3 mb-md-0 text-muted">Backend: {{ backendUrl }} </span>
       <span class="mb-3 mb-md-0 text-muted"
-        >RealTime: {{ realTimeConnection$ | async }}
+        >RealTime: {{ realTimeConnection }}
       </span>
       <span class="mb-3 mb-md-0 text-muted"
         >&copy; 2023 Offering Solutions Software
@@ -11,9 +11,7 @@
     </div>
     <div class="d-flex flex-column bd-highlight mb-3">
       <span class="mb-3 mb-md-0 text-muted">Running on platform web </span>
-      <span
-        class="mb-3 mb-md-0 text-muted"
-        *ngIf="userEmail$ | async as userEmail"
+      <span class="mb-3 mb-md-0 text-muted" *ngIf="userEmail"
         >LoggedIn as {{ userEmail }}
       </span>
     </div>
