moving footer component

--- a/m05/end/apps/doggo-rating-app/src/app/shell/layout/layout.component.html
+++ b/m05/end/apps/doggo-rating-app/src/app/shell/layout/layout.component.html
@@ -10,4 +10,5 @@
 <app-footer
   [userEmail]="userEmail$ | async"
   [realTimeConnection]="realTimeConnection$ | async"
+  [backendUrl]="backendUrl"
 ></app-footer>
