--- a/m05/end/libs/doggos/ui/src/lib/doggo-list/doggo-list.component.html
+++ b/m05/end/libs/doggos/ui/src/lib/doggo-list/doggo-list.component.html
@@ -1,7 +1,7 @@
 <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
   <div class="col" *ngFor="let doggo of doggos">
     <div
-      class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+      class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg card-hover"
       style="
         background-image: url('{{ doggo.imageUrl }}');
       "
