--- a/m04/apps/doggo-rating-app/src/app/shell/footer/footer.component.html
+++ b/m04/apps/doggo-rating-app/src/app/shell/footer/footer.component.html
@@ -2,11 +2,8 @@
   <div class="d-flex flex-wrap justify-content-between">
     <div class="d-flex flex-column bd-highlight mb-3">
       <span class="mb-3 mb-md-0 text-muted">Backend: {{ backendUrl }} </span>
-      <span class="mb-3 mb-md-0 text-muted"
-        >RealTime: {{ realTimeConnection$ | async }}
-      </span>
-      <span class="mb-3 mb-md-0 text-muted"
-        >&copy; 2023 Offering Solutions Software
+      <span class="mb-3 mb-md-0 text-muted">
+        >&copy; 2023 made with ♥️ by Fabian Gosebrink
       </span>
     </div>
     <div class="d-flex flex-column bd-highlight mb-3">
