--- a/m05/end/libs/shared/ui-common/src/lib/footer/footer.component.html
+++ b/m05/end/libs/shared/ui-common/src/lib/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="d-flex flex-column bd-highlight mb-3">
       <span class="mb-3 mb-md-0 text-muted">Backend: {{ backendUrl }} </span>
       <span class="mb-3 mb-md-0 text-muted"
-        >&copy; 2023 Offering Solutions Software
+        >&copy; 2023 made with ♥️ by Fabian Gosebrink
       </span>
     </div>
     <div class="d-flex flex-column bd-highlight mb-3">
