--- a/m04/start/apps/doggo-rating-app/src/app/shell/footer/footer.component.html
+++ b/m04/start/apps/doggo-rating-app/src/app/shell/footer/footer.component.html
@@ -8,9 +8,7 @@
     </div>
     <div class="d-flex flex-column bd-highlight mb-3">
       <span class="mb-3 mb-md-0 text-muted">Running on platform web </span>
-      <span
-        class="mb-3 mb-md-0 text-muted"
-        *ngIf="userEmail$ | async as userEmail"
+      <span class="mb-3 mb-md-0 text-muted" *ngIf="userEmail"
         >LoggedIn as {{ userEmail }}
       </span>
     </div>
