--- a/m04/start/apps/doggo-rating-app/src/app/shell/layout/layout.component.html
+++ b/m04/start/apps/doggo-rating-app/src/app/shell/layout/layout.component.html
@@ -2,9 +2,11 @@
   [loggedIn]="isLoggedIn$ | async"
   (dologin)="login()"
   (doLogout)="logout()"
-  [doggoCount]="myDoggoCount$ | async"
 ></app-navigation>
 
 <router-outlet></router-outlet>
 
-<app-footer></app-footer>
+<app-footer
+  [userEmail]="userEmail$ | async"
+  [backendUrl]="backendUrl"
+></app-footer>
