--- a/m04/start/apps/doggo-rating-app/src/app/shell/navigation/navigation.component.html
+++ b/m04/start/apps/doggo-rating-app/src/app/shell/navigation/navigation.component.html
@@ -5,22 +5,28 @@
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
       <li>
         <a
-          [routerLink]="'doggos'"
+          [routerLink]="'/doggos'"
           routerLinkActive="active"
+          [routerLinkActiveOptions]="isActiveMatchOptions"
           class="nav-link px-2 link-dark"
           >Home</a
         >
       </li>
       <li *ngIf="loggedIn">
         <a
-          [routerLink]="'doggos/my'"
+          [routerLink]="'/doggos/my'"
           routerLinkActive="active"
           class="nav-link px-2 link-dark"
-          >My Doggos ({{ doggoCount }})</a
+          >My Doggos</a
         >
       </li>
       <li>
-        <a [routerLink]="'about'" class="nav-link px-2 link-dark">About</a>
+        <a
+          [routerLink]="'about'"
+          routerLinkActive="active"
+          class="nav-link px-2 link-dark"
+          >About</a
+        >
       </li>
     </ul>
   </div>
